fix screen bug on mobile console view

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -2,7 +2,7 @@
 @import './styles/utilities/variables';
 
 body {
-  position: fixed;
+  
   background-color: $bg-color;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -73,6 +73,12 @@ a:hover .neon-blue {
 
 @include mobile {
   body {
+    width: 100vw;
+  }
+
+  html {
+    width: 100%;
+    height: 100%;
   }
     
 } 
